--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "test:chromium":"npx playwright test --project chromium",
+    "test:first":"npx playwright test --grep@first",
+    "test:report":"npx playwright test && npx playwright show-report"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
